--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -122,49 +122,41 @@ code: |
   trial_court.address.county
   
   nav.set_section('your_income')
-  if public_benefits.there_are_any:
+  if len(public_benefits) > 0:
     public_benefits.review_items
     user_qualifies_interstitial   
     #if user gets public benefits and they work, they only need to give us their employer name and address, and there's space for two jobs on the form
-    if employed:
-      jobs.target_number
-      if jobs.target_number == 1:
-        jobs[0].employer.address.address
-      if jobs.target_number >= 2:
-        jobs[0].employer.address.address
-        jobs[1].employer.address.address
-      #jobs.gather()
-      #review_jobs    
+    jobs.gather()
   else:
-    if employed:
-      jobs.gather()
+    jobs.gather()
+    if len(jobs) > 0:
       review_jobs
     set_progress(40)
     
-    if other_incomes.there_are_any:
+    if len(other_incomes) > 0:
       other_incomes.review_items
 
     set_progress(50)
     nav.set_section('your_expenses')
     expenses_intro
-    if expenses.there_are_any:
+    if len(expenses) > 0:
       expenses.review_items
 
     set_progress(60)
     nav.set_section('your_assets')
     assets_intro
   
-    if vehicles.there_are_any:
+    if len(vehicles) > 0:
       vehicles.review_items
   
-    if real_estate.there_are_any:
+    if len(real_estate) > 0:
       real_estate.review_items
         
     set_progress(70)
-    if bank_assets.there_are_any:
+    if len(bank_assets) > 0:
       bank_assets.review_items    
     
-    if other_assets.there_are_any:
+    if len(other_assets) > 0:
       other_assets.review_items        
       
     nav.set_section('reasons')
@@ -173,7 +165,6 @@ code: |
     
   set_progress(90)
   interview_order_VT_fee_waiver = True
-
 
 ---
 ###################### MAIN INTERVIEW ORDER ######################
@@ -516,6 +507,10 @@ fields:
   - "Do you get income from working?": employed
     datatype: yesnoradio
 ---
+code: |
+  if not employed:
+    jobs.target_number = 0
+---
 id: self employed income
 question: |
   What do you make in self-employed income each month?
@@ -537,13 +532,16 @@ fields:
 ---
 generic object: ALItemizedJob
 code: |
-  x.source
-  if not x.is_self_employed:
-    x.employer.name.first
-  x.wages_added
-  x.to_add.gather()
-  # for fee waiver form we are not collecting items to subtract from wages
-  # x.to_subtract.gather()
+  if len(public_benefits) == 0:
+    x.source
+    if not x.is_self_employed:
+      x.employer.name.first
+    x.wages_added
+    x.to_add.gather()
+    # for fee waiver form we are not collecting items to subtract from wages
+    # x.to_subtract.gather()
+  else:
+    x.employer.name.first    
   x.complete = True
 ---
 generic object: ALItemizedValueDict
@@ -791,7 +789,7 @@ columns:
   - Employer: |
       row_item.employer.name.first if defined("row_item.employer.name.first") else ""
   - Monthly gross income: |
-      currency(row_item.gross_total(times_per_year=12))
+      currency(row_item.gross_total(times_per_year=12)) if len(public_benefits) == 0 else "Not needed"
 
 edit:
   - revisit
@@ -1844,8 +1842,6 @@ review:
       
   - Edit: 
       - public_benefits.revisit
-      - recompute:
-        - public_benefits.gathered   
     button: |
       **Public assistance**
       
@@ -1857,19 +1853,21 @@ review:
       - None
       % endif
 
-  - Edit: employed
+  - Edit: 
+      - employed
+      - jobs.revisit
     button: |
       **Employed**
       
       - ${ word(yesno(employed)) }
       
-  - Edit: jobs.revisit
-    button: |
+      % if len(jobs) > 0:
       **Jobs**
       
       % for item in jobs:
       - ${ item.source } / ${ item.employer.name.first if not item.is_self_employed else "Self-employed"}
       % endfor
+      % endif
 
 
   - Edit: users1_income_self_employment_monthly_amount
@@ -1903,7 +1901,7 @@ review:
     button: |
       **Expenses**:
 
-      % if not expenses.selected_types.any_true():
+      % if len(expenses) == 0:
       - None
       % endif
       % for item in expenses:
@@ -1926,8 +1924,6 @@ review:
       % endif
   - Edit: 
       - real_estate.revisit
-      - recompute:
-        - real_estate.gathered
     button: |
       **Real estate**
 
@@ -1946,7 +1942,7 @@ review:
     button: |
       **Bank accounts and cash**
       
-      % for item in bank_assets.complete_elements():
+      % for item in bank_assets:
       - ${ item.display_name.lower() }
       % endfor
       % if not bank_assets.there_are_any:
@@ -2117,10 +2113,12 @@ attachments:
       - "employed_no": ${ not employed }
       
       - "users1_employer_0_name": |
-          % if jobs[0].is_self_employed:
+          % if len(jobs) > 0 and jobs[0].is_self_employed:
             Self-employed
-          % else:
+          % elif len(jobs) > 0:
             ${ jobs[0].employer }
+          % else:
+            
           % endif
       - "users1_employer_0_address_one_line": |
           % if defined("jobs[0].employer.address"):
@@ -2128,10 +2126,12 @@ attachments:
           % endif
 
       - "users1_employer_1_name": |
-          % if jobs[1].is_self_employed:
+          % if len(jobs) > 1 and jobs[1].is_self_employed:
             Self-employed
-          % else:
+          % elif len(jobs) > 1:
             ${ jobs[1].employer }
+          % else:
+            
           % endif
       - "users1_employer_1_address_one_line": |
           % if defined("jobs[1].employer.address"):
@@ -2176,6 +2176,8 @@ attachments:
       
       - "users1_income_employment_monthly_amount": |
           % if not employed:
+          
+          % elif len(public_benefits) > 0:
           
           % else:
           ${ currency(jobs.total(source=["full time","part time"],times_per_year=12),symbol="") }
