--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -1927,7 +1927,7 @@ review:
       % for item in vehicles:
       * ${ item.make } ${ item.model } ${ item.year }          
       % endfor
-      % if not vehicles.there_are_any:
+      % if vehicles.number_gathered() == 0:
       - None
       % endif
   - Edit: 
@@ -1942,7 +1942,7 @@ review:
       * ${ item.display_name.lower() }
       % endif
       % endfor
-      % if not real_estate.there_are_any:
+      % if real_estate.number_gathered() == 0:
       - None
       % endif
 
